# AI-Based-Recommendation-System-SwissHome

./: .gitignore  DEMO_GUIDE.md  README.md  agents.py  env_template.txt  graph.py  index.html  main.py  pyproject.toml  requirements.txt
business_rules/: __init__.py  decision_engine.py  rules_config.json
integrations/: __init__.py  microsoft_integration.py  salesforce_integration.py  sap_integration.py
